Adding ending animations.

--- a/ultimate-tic-tac-toe/game.html
+++ b/ultimate-tic-tac-toe/game.html
@@ -74,5 +74,6 @@ along with the Perlenspiel devkit. If not, see <http://www.gnu.org/licenses/>.
 	in the above comments can result in unpredictable engine behavior and/or breakage, and is a grievous violation of The Rules.
 	-->
 	<script type="text/javascript" src="game.js"></script>
+    <!-- <script type="module" src="game.js"></script> -->
 </body>
 </html>
